--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -21,6 +21,11 @@ veggy <- cabbages
  
 ### Is there a difference in average VitC between c39 and c52 cultivation methods?  
 
+
+$H_0$:There is no difference in the Vitamin C content based on the Cultivation techniques
+
+$H_A$:There is a difference in Vitamin C content of cabbages based on cultivation technique
+
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
