--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -47,6 +47,12 @@ This table shows that cultivation method c52 has a higher vitamin C content than
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+plot(VitC~Cult,data=veggy)
+```
+
+This graph shows that c52 is higher in vitamin C content than c39.
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
@@ -55,7 +61,16 @@ This table shows that cultivation method c52 has a higher vitamin C content than
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
+
+The p-value 0.00000003405, it is so small that we reject the null hypothesis. The cultivation methods are different, therefore c59 has a higher vitamin C content than c39.
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+The original question is if there is a difference in vitamin C between c39 and c52. We found it is a significant difference between c39 and c52. We found that c52 had a higher vitamin C content than c39, therefore we recommend using c52 cultivation method.
+
+
